k8s-charts/templates/04-mongodb-deployment.yaml
# -----------------------------------------------------------------------------
# Resource: StatefulSet (MongoDB)
# -----------------------------------------------------------------------------
# Deploys MongoDB as a stateful workload.
# - Persistence: Uses VolumeClaimTemplates to provision EBS volumes.
# - Sidecar: MongoDB Exporter for Prometheus metrics.
# - Secrets: Injects credentials securely from 'amazona-secrets'.
# -----------------------------------------------------------------------------

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: amazona

spec:
  # Headless Service name used to provide stable DNS for each pod
  serviceName: "mongodb"

  # Number of MongoDB replicas (1 for a single-node setup)
  replicas: 1

  # Ensures the StatefulSet manages only pods with this label
  selector:
    matchLabels:
      app: mongodb

  # Pod template used to create each MongoDB replica
  template:
    metadata:
      labels:
        app: mongodb
      annotations:
        # Prometheus Scrape Annotations:
        # Tells Prometheus to discover and scrape metrics from this pod
        prometheus.io/scrape: "true"
        prometheus.io/port: "9216"      # Port where metrics are exposed
        prometheus.io/path: "/metrics"  # HTTP path for metrics
    spec:
      containers:
      - name: mongodb
        image: mongo:6   # Official MongoDB image

        # MongoDB default port
        ports:
        - containerPort: 27017

        # Mount persistent storage into the container
        volumeMounts:
        - name: data
          mountPath: /data/db  # Default MongoDB data directory

      - name: mongodb-exporter
        image: percona/mongodb_exporter:0.40
        args:
        # Connect to MongoDB on localhost (since they share the same network namespace)
        - --mongodb.uri=mongodb://$(MONGO_USER):$(MONGO_PASS)@127.0.0.1:27017/admin
        ports:
        - containerPort: 9216
          name: metrics

  # -----------------------------------------------------------
  # Persistent Storage Template:
  # Automatically creates a dedicated PersistentVolumeClaim
  # named "data" for each pod (data-mongodb-0, data-mongodb-1...)
  # Ensures each replica keeps its own stable storage.
  # -----------------------------------------------------------
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]    # Node-local storage access
      resources:
        requests:
          storage: 1Gi                  # Requested persistent volume size
