k8s-charts/templates/06-prometheus.yaml
#Prometheus Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: amazona
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v2.40.0
        args:
          - "--config.file=/etc/prometheus/prometheus.yml"
          - "--storage.tsdb.path=/prometheus"
          - "--storage.tsdb.retention.time=200h"
          - "--web.external-url=/prometheus/"
        ports:
        - containerPort: 9090
        volumeMounts:                   #Assigning the configmap to prometheus
        - name: config                 
          mountPath: /etc/prometheus
        - name: data
          mountPath: /prometheus
      volumes:
      - name: config
        configMap:
          name: prometheus-config
      - name: data
        emptyDir: {}
---
#Prometheus Service as ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: amazona
spec:
  selector:
    app: prometheus
  ports:
  - name: prometheus
    port: 9090
    targetPort: 9090
  type: ClusterIP
